--- a/packages/frontend/src/html/index.html
+++ b/packages/frontend/src/html/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>__TITLE__</title>
-    <style>__CSS__</style>
+    <link href="style.css" rel="stylesheet">
   </head>
   <body>
     <main class="content">__CONTENT__</main>
@@ -12,6 +12,6 @@
     <aside class="toc">
       <div class="toc__inner">__TOC__</div>
     </aside>
-    <script>__JS__</script>
+    <script src="script.js"></script>
   </body>
 </html>
