--- a/packages/frontend/src/html/index.html
+++ b/packages/frontend/src/html/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>__TITLE__</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap&text=__GLYPHS__" rel="stylesheet">
     <style>/*__CSS__*/</style>
   </head>
   <body>
