--- a/packages/frontend/src/html/index.html
+++ b/packages/frontend/src/html/index.html
@@ -7,10 +7,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap&text=__GLYPHS__" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <style>/*__CSS__*/</style>
   </head>
   <body>
-    <main class="content">__CONTENT__</main>
+    <main class="content">
+      <div class="content__inner">
+      __CONTENT__
+    </div>
+  </main>
     <div class="toc-toggle-button">
       <button class="toc-toggle-button__button" data-js="toc-toggle-button">
         <svg viewBox="0 0 24 24" class="toc-toggle-button__menu">
@@ -21,9 +26,7 @@
         </svg>
       </button>
     </div>
-    <aside class="toc" data-js="toc">
-      <div class="toc__inner">__TOC__</div>
-    </aside>
+    <aside class="toc" data-js="toc">__TOC__</aside>
     <script>__JS__</script>
   </body>
 </html>
