--- a/packages/frontend/src/html/index.html
+++ b/packages/frontend/src/html/index.html
@@ -30,7 +30,11 @@
         <% if (links.length > 0) { %>
           <ul class="menu__links">
             <% links.forEach(function (link) { %>
-              <li><a href="<%= link.url %>" target="_blank"><%= link.text %></a></li>
+              <% if (link.url[0] !== '#') { %>
+                <li><a href="<%= link.url %>" target="_blank"><%= link.text %></a></li>
+              <% } else { %>
+                <li><a href="<%= link.url %>"><%= link.text %></a></li>
+              <% } %>
             <% }) %>
           </ul>
         <% } %>
