--- a/packages/frontend/src/html/index.html
+++ b/packages/frontend/src/html/index.html
@@ -15,34 +15,36 @@
     <main class="content">
       <div class="content__inner" data-js="content"><%= content %></div>
     </main>
-    <% if (links.length > 0 || toc !== null) { %>
-      <div class="sidebar-toggle-button<% if (toc === null) { %> sidebar-toggle-button--links-only<% } %>">
-        <button class="sidebar-toggle-button__button" data-js="sidebar-toggle-button">
-          <svg viewBox="0 0 16 16" class="sidebar-toggle-button__svg sidebar-toggle-button__menu">
+    <% if (sections !== null || links.length > 0 || toc !== null) { %>
+      <div class="menu-toggle-button<% if (toc === null) { %> menu-toggle-button--links-only<% } %>">
+        <button class="menu-toggle-button__button" data-js="menu-toggle-button">
+          <svg viewBox="0 0 16 16" class="menu-toggle-button__svg menu-toggle-button__menu">
             <path fill="currentColor" fill-rule="evenodd" clip-rule="evenodd" d="M0 2.75C0 2.33579.335786 2 .75 2h14.5c.4142 0 .75.33579.75.75s-.3358.75-.75.75H.75C.335786 3.5 0 3.16421 0 2.75zM0 8c0-.41421.335786-.75.75-.75h14.5c.4142 0 .75.33579.75.75s-.3358.75-.75.75H.75C.335786 8.75 0 8.41421 0 8zm.75 4.5c-.414214 0-.75.3358-.75.75s.335786.75.75.75h14.5c.4142 0 .75-.3358.75-.75s-.3358-.75-.75-.75H.75z" />
           </svg>
-          <svg viewBox="0 0 16 16" class="sidebar-toggle-button__svg sidebar-toggle-button__close">
+          <svg viewBox="0 0 16 16" class="menu-toggle-button__svg menu-toggle-button__close">
             <path fill="currentColor" fill-rule="evenodd" clip-rule="evenodd" d="M1.28033.21967c-.292893-.2928933-.767767-.2928933-1.06066 0-.2928933.292893-.2928933.767767 0 1.06066L6.93934 8 .21967 14.7197c-.2928933.2929-.2928933.7677 0 1.0606.292893.2929.767767.2929 1.06066 0L8 9.06066l6.7197 6.71964c.2929.2929.7677.2929 1.0606 0 .2929-.2929.2929-.7677 0-1.0606L9.06066 8l6.71964-6.71967c.2929-.292893.2929-.767767 0-1.06066-.2929-.2928933-.7677-.2928933-1.0606 0L8 6.93934 1.28033.21967z" />
           </svg>
         </button>
       </div>
-      <div class="menu">
-        <div class="menu__wrapper" data-js="sections">
-          <% if (sections !== null) { %>
-            <%= sections %>
-          <% } %>
-          <% if (links.length > 0) { %>
-            <ul>
-              <% links.forEach(function (link) { %>
-                <% if (link.url[0] !== '#') { %>
-                  <li><a href="<%= link.url %>" target="_blank"><%= link.text %></a></li>
-                <% } else { %>
-                  <li><a href="<%= link.url %>"><%= link.text %></a></li>
-                <% } %>
-              <% }) %>
-            </ul>
-          <% } %>
-        </div>
+      <div class="menu" data-js="menu">
+        <% if (sections !== null || links.length > 0) { %>
+          <div class="menu__top-bar" data-js="top-bar">
+            <% if (sections !== null) { %>
+              <%= sections %>
+            <% } %>
+            <% if (links.length > 0) { %>
+              <ul>
+                <% links.forEach(function (link) { %>
+                  <% if (link.url[0] !== '#') { %>
+                    <li><a href="<%= link.url %>" target="_blank"><%= link.text %></a></li>
+                  <% } else { %>
+                    <li><a href="<%= link.url %>"><%= link.text %></a></li>
+                  <% } %>
+                <% }) %>
+              </ul>
+            <% } %>
+          </div>
+        <% } %>
         <% if (toc !== null) { %>
           <aside class="menu__toc" data-js="toc"><%= toc %></aside>
         <% } %>
