--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <main class="content">
-      <div class="content__inner"data-js="content"><p><img src="https://github.com/yuanqing/single-page-markdown-website/tree/master/media/single-page-markdown-website.svg"alt="Single-Page Markdown Website"></p>
+      <div class="content__inner"data-js="content"><p><img src="https://raw.githubusercontent.com/yuanqing/single-page-markdown-website/master/media/single-page-markdown-website.svg"alt="Single-Page Markdown Website"></p>
 <p><a href="https://www.npmjs.com/package/single-page-markdown-website"><img src="https://img.shields.io/npm/v/single-page-markdown-website?cacheSeconds=1800"alt="npm Version"></a> <a href="https://github.com/yuanqing/single-page-markdown-website/actions?query=workflow%3Abuild"><img src="https://github.com/yuanqing/single-page-markdown-website/workflows/build/badge.svg"alt="build"></a></p>
 <blockquote>
 <p>Create a nice single-page website from one or more Markdown files</p>
