--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 </code></pre>
 <!-- ``` end -->
 <h1 id="license">License<a aria-hidden class="header-link"tabindex="-1"href="#license"><span class="header-link__text">#</span></a></h1>
-<p><a href="/LICENSE.md">MIT</a></p></div>
+<p><a href="https://github.com/yuanqing/single-page-markdown-website/blob/master/LICENSE.md">MIT</a></p></div>
     </main>
     
       <div class="menu-toggle-button">
