--- a/packages/frontend/src/html/index.html
+++ b/packages/frontend/src/html/index.html
@@ -12,9 +12,9 @@
       <meta property="og:description" content="<%- description %>">
       <meta name="twitter:description" content="<%- description %>">
     <% } %>
-    <% if (shareImage !== null) { %>
-      <meta property="og:image" content="<%- shareImage %>">
-      <meta name="twitter:image" content="<%- shareImage %>">
+    <% if (socialMediaPreviewImage !== null) { %>
+      <meta property="og:image" content="<%- socialMediaPreviewImage %>">
+      <meta name="twitter:image" content="<%- socialMediaPreviewImage %>">
       <meta name="twitter:card" content="summary_large_image">
     <% } %>
     <meta name="viewport" content="width=device-width, initial-scale=1">
