--- a/packages/frontend/src/html/index.html
+++ b/packages/frontend/src/html/index.html
@@ -20,7 +20,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style><%= css %></style>
   </head>
-  <body>
+  <body class="<% if (toc === null) { %>--no-toc<% } %>">
     <main class="content" data-js="content">
       <div class="content__inner"><%= content %></div>
     </main>
@@ -37,13 +37,13 @@
           </button>
         <% } %>
         <% if (title !== null) { %>
-          <div class="top-bar__title">
+          <div class="top-bar__title" data-js="title">
             <a href="#">
               <%- title %>
               <% if (version !== null) { %>
-                <span><%- version %></span>
+                <span class="top-bar__title-version"><%- version %></span>
               <% } %>
-            </a>
+            </span>
           </div>
         <% } %>
         <% if (sections !== null || links.length > 0) { %>
