--- a/packages/frontend/src/html/index.html
+++ b/packages/frontend/src/html/index.html
@@ -38,7 +38,7 @@
         <% } %>
         <% if (title !== null) { %>
           <div class="top-bar__title" data-js="title">
-            <a href="#">
+            <a href="<%= titleUrl %>">
               <%- title %>
               <% if (version !== null) { %>
                 <span class="top-bar__title-version"><%- version %></span>
