--- a/packages/frontend/src/html/index.html
+++ b/packages/frontend/src/html/index.html
@@ -37,13 +37,13 @@
           </button>
         <% } %>
         <% if (title !== null) { %>
-          <div class="top-bar__title" data-js="title">
-            <a href="<%= titleUrl %>">
+          <div class="top-bar__title">
+            <a class="top-bar__title-link" href="<%= titleUrl %>" data-js="title-link">
               <%- title %>
-              <% if (version !== null) { %>
-                <span class="top-bar__title-version"><%- version %></span>
-              <% } %>
-            </span>
+            </a>
+            <% if (version !== null) { %>
+              <span class="top-bar__title-version"><%- version %></span>
+            <% } %>
           </div>
         <% } %>
         <% if (sections !== null || links.length > 0) { %>
