--- a/packages/frontend/src/html/index.html
+++ b/packages/frontend/src/html/index.html
@@ -12,10 +12,13 @@
       <meta property="og:description" content="<%- description %>">
       <meta name="twitter:description" content="<%- description %>">
     <% } %>
-    <% if (socialMediaPreviewImage !== null) { %>
-      <meta property="og:image" content="<%- socialMediaPreviewImage %>">
-      <meta name="twitter:image" content="<%- socialMediaPreviewImage %>">
+    <% if (shareImage !== null) { %>
+      <meta property="og:image" content="<%- shareImage %>">
+      <meta name="twitter:image" content="<%- shareImage %>">
       <meta name="twitter:card" content="summary_large_image">
+    <% } %>
+    <% if (faviconImage !== null) { %>
+      <link rel="icon" href="<%- faviconImage %>">
     <% } %>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style><%= css %></style>
